impls/monero.rs/src/bindings.rs

/* automatically generated by rust-bindgen 0.70.1 */

pub const MONERO_wallet2_api_c_h_sha256: &[u8; 65] =
    b"e8db0ef0324a153f5e3ecca4c0db23c54f4576e84988f04bd4f11c1142f9d7ad\0";
pub const MONERO_wallet2_api_c_cpp_sha256 : & [u8 ; 106] = b"dca52ac9ee009fda9fb5726543a454885e61d8eb74fb33112288029ed625bec5-b089f9ee69924882c5d14dd1a6991deb05d9d1cd\0" ;
pub const MONERO_wallet2_api_c_exp_sha256: &[u8; 65] =
    b"c8913ac41068f67b57c9b0a3c7dd8973e3c1273b66c2ff0aadb0003931da748c\0";
pub const NetworkType_MAINNET: ::std::os::raw::c_int = 0;
pub const NetworkType_TESTNET: ::std::os::raw::c_int = 1;
pub const NetworkType_STAGENET: ::std::os::raw::c_int = 2;
pub const PendingTransactionStatus_Ok: ::std::os::raw::c_int = 0;
pub const PendingTransactionStatus_Error: ::std::os::raw::c_int = 1;
pub const PendingTransactionStatus_Critical: ::std::os::raw::c_int = 2;
pub const Priority_Default: ::std::os::raw::c_int = 0;
pub const Priority_Low: ::std::os::raw::c_int = 1;
pub const Priority_Medium: ::std::os::raw::c_int = 2;
pub const Priority_High: ::std::os::raw::c_int = 3;
pub const Priority_Last: ::std::os::raw::c_int = 4;
extern "C" {
    pub fn MONERO_PendingTransaction_status(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_PendingTransaction_errorString(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_commit(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        filename: *const ::std::os::raw::c_char,
        overwrite: bool,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_PendingTransaction_commitUR(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        max_fragment_length: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_amount(pendingTx_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_PendingTransaction_dust(pendingTx_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_PendingTransaction_fee(pendingTx_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_PendingTransaction_txid(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_txCount(pendingTx_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_PendingTransaction_subaddrAccount(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_subaddrIndices(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_multisigSignData(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_signMultisigTx(pendingTx_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_PendingTransaction_signersKeys(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_PendingTransaction_hex(
        pendingTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
pub const UnsignedTransactionStatus_Ok: ::std::os::raw::c_int = 0;
pub const UnsignedTransactionStatus_Error: ::std::os::raw::c_int = 1;
pub const UnsignedTransactionStatus_Critical: ::std::os::raw::c_int = 2;
extern "C" {
    pub fn MONERO_UnsignedTransaction_status(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_errorString(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_amount(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_fee(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_mixin(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_confirmationMessage(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_paymentId(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_recipientAddress(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_minMixinCount(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_txCount(unsignedTx_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_sign(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        signedFileName: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_UnsignedTransaction_signUR(
        unsignedTx_ptr: *mut ::std::os::raw::c_void,
        max_fragment_length: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
pub const TransactionInfoDirection_In: ::std::os::raw::c_int = 0;
pub const TransactionInfoDirection_Out: ::std::os::raw::c_int = 1;
extern "C" {
    pub fn MONERO_TransactionInfo_direction(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_TransactionInfo_isPending(txInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_TransactionInfo_isFailed(txInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_TransactionInfo_isCoinbase(txInfo_ptr: *mut ::std::os::raw::c_void) -> bool;
}
extern "C" {
    pub fn MONERO_TransactionInfo_amount(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_fee(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_blockHeight(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_description(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionInfo_subaddrIndex(
        txInfo_ptr: *mut ::std::os::raw::c_void,
        separator: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionInfo_subaddrAccount(txInfo_ptr: *mut ::std::os::raw::c_void) -> u32;
}
extern "C" {
    pub fn MONERO_TransactionInfo_label(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionInfo_confirmations(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_unlockTime(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_hash(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionInfo_timestamp(txInfo_ptr: *mut ::std::os::raw::c_void) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_paymentId(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionInfo_transfers_count(
        txInfo_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_TransactionInfo_transfers_amount(
        txInfo_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> u64;
}
extern "C" {
    pub fn MONERO_TransactionInfo_transfers_address(
        txInfo_ptr: *mut ::std::os::raw::c_void,
        address: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_TransactionHistory_count(
        txHistory_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_TransactionHistory_transaction(
        txHistory_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_TransactionHistory_transactionById(
        txHistory_ptr: *mut ::std::os::raw::c_void,
        id: *const ::std::os::raw::c_char,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_TransactionHistory_refresh(txHistory_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_TransactionHistory_setTxNote(
        txHistory_ptr: *mut ::std::os::raw::c_void,
        txid: *const ::std::os::raw::c_char,
        note: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn MONERO_AddressBookRow_extra(
        addressBookRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_AddressBookRow_getAddress(
        addressBookRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_AddressBookRow_getDescription(
        addressBookRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_AddressBookRow_getPaymentId(
        addressBookRow_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_AddressBookRow_getRowId(addressBookRow_ptr: *mut ::std::os::raw::c_void)
        -> usize;
}
pub const AddressBookErrorCodeStatus_Ok: ::std::os::raw::c_int = 0;
pub const AddressBookErrorCodeGeneral_Error: ::std::os::raw::c_int = 1;
pub const AddressBookErrorCodeInvalid_Address: ::std::os::raw::c_int = 2;
pub const AddressBookErrorCodeInvalidPaymentId: ::std::os::raw::c_int = 3;
extern "C" {
    pub fn MONERO_AddressBook_getAll_size(
        addressBook_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn MONERO_AddressBook_getAll_byIndex(
        addressBook_ptr: *mut ::std::os::raw::c_void,
        index: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn MONERO_AddressBook_addRow(
        addressBook_ptr: *mut ::std::os::raw::c_void,
        dst_addr: *const ::std::os::raw::c_char,
        payment_id: *const ::std::os::raw::c_char,
        description: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_AddressBook_deleteRow(
        addressBook_ptr: *mut ::std::os::raw::c_void,
        rowId: usize,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_AddressBook_setDescription(
        addressBook_ptr: *mut ::std::os::raw::c_void,
        rowId: usize,
        description: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn MONERO_AddressBook_refresh(addressBook_ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn MONERO_AddressBook_errorString(
        addressBook_ptr: *mut ::std::os::raw::c_void,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn MONERO_AddressBook_errorCode(
        addressBook_ptr: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
